corrected spacing

--- a/www/style/default.css
+++ b/www/style/default.css
@@ -1,4 +1,5 @@
 html{
+    width: 100%;
     overflow-x: hidden;
     font-family: Verdana, sans-serif;
 }
